# obs-livesplit-remote

./: Cargo.toml  LICENSE  flake.nix  shell.nix
src/: main.rs
