[package]
name = "obs-livesplit-remote"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.66"
clap = { version = "4.0.22", features = ["derive"] }
console = "0.15.5"
obws = "0.10.0-beta.4"
tokio = { version = "1", features = ["full"] }
